enum colour {
    WHITE, BLACK, GREEN, RED, YELLOW
}
enum x {
    a, b, c, d, e, f, g, h
}
enum type {
    king = "k",
    rook = "r",
    bishop ="b",
    queen = "q",
    knight = "k",
    pawn = "p",
}

export{ colour, x, type }